--- a/app/src/views/home/index.ejs
+++ b/app/src/views/home/index.ejs
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>git 원본</title>
+  <title>여섯번째 시도</title>
 </head>
 <body>
-  git 메인
+  여섯번째 시도
 </body>
 </html>
